[package]
name = "microsleep"
version = "0.1.2"
edition = "2021"
description="high performance async sleep for massive numbers of timers"
license="ISC"
repository="https://github.com/nullchinchilla/microsleep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diatomic-waker = "0.1.0"
futures-intrusive = "0.5.0"
once_cell = "1.16.0"
parking_lot = "0.12.1"
priority-queue = "1.3.0"
smallvec = "1.10.0"
spin_sleep = "1.1.1"
