[package]
name = "microsleep"
version = "0.1.15"
edition = "2021"
description="high performance async sleep for massive numbers of timers"
license="ISC"
repository="https://github.com/nullchinchilla/microsleep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.10.0"

event-listener = "2.5.3"
futures-intrusive = "0.5.0"
futures-lite = "1.12.0"
log = "0.4.17"
once_cell = "1.16.0"
parking_lot = "0.12.1"
priority-queue = "1.3.0"
slab = "0.4.7"

spin_sleep = "1.1.1"
